#348 Add few documentation changes